Move developer.css in public folder

--- a/public/index.html
+++ b/public/index.html
@@ -16,6 +16,7 @@
 
 <body>
   <div id="root"></div>
+  <link rel="stylesheet" type="text/css" href="%PUBLIC_URL%/developer.css" />
 </body>
 
 </html>
