--- a/public/index.html
+++ b/public/index.html
@@ -17,6 +17,9 @@
 <body>
   <div id="root"></div>
   <link rel="stylesheet" href="%PUBLIC_URL%/assets/css/developer.css">
+  <link rel="stylesheet" href="%PUBLIC_URL%/assets/css/media.css">  
+  <link rel="stylesheet" href="%PUBLIC_URL%/assets/css/media-admin.css">  
+  
 </body>
 
 </html>
