--- a/public/index.html
+++ b/public/index.html
@@ -10,7 +10,7 @@
   <meta name="theme-color" content="#000000">
 
   <link rel="manifest" href="%PUBLIC_URL%/manifest.json">
-  <link rel="shortcut icon" href="%PUBLIC_URL%/favicon.ico" type="image/x-icon">
+  <link rel="shortcut icon" href="%PUBLIC_URL%/favicon.png" type="image/x-icon">
 </head>
 
 <body>
