put header [WIP]

--- a/public/index.html
+++ b/public/index.html
@@ -16,6 +16,7 @@
 <body>
   <div id="root"></div>
   <link rel="stylesheet" href="%PUBLIC_URL%/assets/css/developer.css">
+  <!-- <link rel="stylesheet" href="%PUBLIC_URL%/assets/css/bootstrap.min.css"> -->
   <link rel="stylesheet" href="%PUBLIC_URL%/assets/css/media.css">  
   <link rel="stylesheet" href="%PUBLIC_URL%/assets/css/media-admin.css">  
   
