--- a/public/index.html
+++ b/public/index.html
@@ -15,6 +15,12 @@
 
 <body>
   <div id="root"></div>
+  <link href="//cdn.syncfusion.com/ej2/17.2.28-beta/ej2-base/styles/material.css" rel="stylesheet" />
+  <link href="//cdn.syncfusion.com/ej2/17.2.28-beta/ej2-buttons/styles/material.css" rel="stylesheet" />
+  <link href="//cdn.syncfusion.com/ej2/17.2.28-beta/ej2-popups/styles/material.css" rel="stylesheet" />
+  <link href="//cdn.syncfusion.com/ej2/17.2.28-beta/ej2-splitbuttons/styles/material.css" rel="stylesheet" />
+  <link href="//cdn.syncfusion.com/ej2/17.2.28-beta/ej2-inputs/styles/material.css" rel="stylesheet" />
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/systemjs/0.19.38/system.js"></script>
   <link rel="stylesheet" href="%PUBLIC_URL%/assets/css/developer.css">
   <link rel="stylesheet" href="%PUBLIC_URL%/assets/css/media.css">  
   <link rel="stylesheet" href="%PUBLIC_URL%/assets/css/media-admin.css">  
